.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <label>Agreement Status</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Products_Configured__c</fullName>
        <formula>IF(
AND(Count_of_Products__c &gt; 0, Count_of_Products__c = Count_of_Products_Configured__c), 
TRUE, 
FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Products Configured?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alpha_Below_Rate_Lines__c</fullName>
        <label>Alpha Below Rate Lines</label>
        <summaryFilterItems>
            <field>OrderItem.Full_Rate_Below_Rate__c</field>
            <operation>equals</operation>
            <value>Below Rate</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Alpha_Full_Rate_Lines__c</fullName>
        <label>Alpha Full Rate Lines</label>
        <summaryFilterItems>
            <field>OrderItem.Full_Rate_Below_Rate__c</field>
            <operation>equals</operation>
            <value>Full Rate</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Alpha_Lines__c</fullName>
        <label>Alpha Lines</label>
        <summaryFilterItems>
            <field>OrderItem.Package_Name__c</field>
            <operation>contains</operation>
            <value>alpha,Alpha,ALPHA</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Co_Op_Lines__c</fullName>
        <label>Co-Op Lines</label>
        <summaryFilterItems>
            <field>OrderItem.Co_Op_Line__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Co_op_Auto_Lines__c</fullName>
        <label>Co-op Auto Lines</label>
        <summaryFilterItems>
            <field>OrderItem.Opt_Out_Co_op_Submission__c</field>
            <operation>equals</operation>
            <value>Opt Out of Automated Co-op Submission</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Co_op_Auto_OEM_Lines__c</fullName>
        <label>Co-op Auto OEM Lines</label>
        <summaryFilterItems>
            <field>OrderItem.Opt_Out_Co_op_Submission__c</field>
            <operation>equals</operation>
            <value>Opt Out of OEM Graphics &amp; Automated Co-op Submission</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Co_op_CPO_Auto_Lines__c</fullName>
        <label>Co-op CPO Auto Lines</label>
        <summaryFilterItems>
            <field>OrderItem.Opt_Out_Co_op_Submission_CPO__c</field>
            <operation>equals</operation>
            <value>Opt Out of Automated Co-op Submission</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Signing_Contact__r.Id, Signing_Contact__r.FirstName +&quot; &quot;+ Signing_Contact__r.LastName,&quot;_self&quot;) +&quot; &quot;+
HYPERLINK(&quot;/flow/Update_Order_Contact?varOppId=&quot;+OpportunityId+&quot;&amp;retURL=/&quot;+Id, &quot;[Change]&quot; ,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Products_Configured__c</fullName>
        <description>This will indicate, via rollup summary, the number of packages (order lines) that have been configured, based on the sales agents&apos; manual indication as such.</description>
        <inlineHelpText>This will indicate, via rollup summary, the number of packages (order lines) that have been configured, based on the sales agents&apos; manual indication as such.</inlineHelpText>
        <label>Count of Products Configured</label>
        <summaryFilterItems>
            <field>OrderItem.Configured__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Products__c</fullName>
        <description>This will indicate, via rollup summary, the number of packages (order lines) that are related to this order.</description>
        <inlineHelpText>This will indicate, via rollup summary, the number of packages (order lines) that are related to this order.</inlineHelpText>
        <label>Count of Products</label>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dealership_City__c</fullName>
        <formula>Account.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealership City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_ID__c</fullName>
        <formula>Account.SVOC_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealership ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealership Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Phone__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealership Phone #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_State__c</fullName>
        <formula>Account.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealership State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Street_Address__c</fullName>
        <formula>Account.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealership Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Zip__c</fullName>
        <formula>Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealership Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Order_Summary__c</fullName>
        <formula>IF( All_Products_Configured__c = FALSE,&apos;Items Pending Configuration&apos;,
 HYPERLINK(&quot;/apex/runOrderDDP?Id=&quot;&amp;Id&amp; &quot;&amp;hideddp=true&amp;ddpIds=a1dM00000013lHn&amp;deploy=a1cM0000001hn5o&quot;
,&quot;Generate&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Order Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Advertising_Budget_Lines__c</fullName>
        <label>Monthly Advertising Budget Lines</label>
        <summaryFilterItems>
            <field>OrderItem.Monthly_Advertising_Budget__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_Lines__c</fullName>
        <label>Order Lines</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order_Products__c</fullName>
        <formula>HYPERLINK(&apos;/apex/OrderProductRLVF?Id=&apos;&amp; Id ,&apos;View/Edit&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_to_EchoSign__c</fullName>
        <formula>IF( All_Products_Configured__c = FALSE,&apos;Items Pending Configuration&apos;, 
HYPERLINK(&quot;/apex/echosign_dev1__AgreementTemplateProcess?masterId=&quot;&amp;Id&amp;&quot;&amp;templateId=a0vM0000001DR1k&quot;&amp;&quot;&amp;accountId=&quot;&amp; Account_ID__c, &quot;Send&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send to EchoSign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Date__c</fullName>
        <label>Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Signing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Line_Items__c</fullName>
        <label>3rd Party Line Items</label>
        <summaryFilterItems>
            <field>OrderItem.X3rd_Party_Line_Item__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iMR_No_Lines__c</fullName>
        <label>iMR_No_Lines</label>
        <summaryFilterItems>
            <field>OrderItem.iMR_Opt_In__c</field>
            <operation>equals</operation>
            <value>No</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>iMR_Yes_Lines__c</fullName>
        <label>iMR_Yes_Lines</label>
        <summaryFilterItems>
            <field>OrderItem.iMR_Opt_In__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <recordTypes>
        <fullName>Order_Master_Layout</fullName>
        <active>true</active>
        <label>Order Master Layout</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>